--- a/index.html
+++ b/index.html
@@ -261,55 +261,55 @@
         </div>
         </section>
 <!-- Customer -->
-        <section class="customers">
-            <div class="container">
-                <h2 class="section-title">Customers</h2>
-                <ul class="customers-content list">
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo" width="104" height="56">
-                                <use href="./imаges/icons.svg#logo1"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo">
-                                <use href="./imаges/icons.svg#logo2"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo">
-                                <use href="./imаges/icons.svg#logo-3"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo">
-                                <use href="./imаges/icons.svg#logo-4"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo">
-                                <use href="./imаges/icons.svg#logo-5"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="customers-banner">
-                        <a href="" class="customers-link">
-                            <svg class="customers-logo">
-                                <use href="./imаges/icons.svg#logo-6"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div >
-        </section>
+<section class="customers">
+    <div class="container">
+        <h2 class="section-title">Customers</h2>
+        <ul class="customers-content list">
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-3"></use>
+                    </svg>
+            </a>
+            </li>
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-4"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-5"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="customers-banner">
+                <a href="" class="customers-link">
+                    <svg class="customers-logo">
+                        <use href="./images/icons.svg#icon-Logo-6"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div >
+</section>
 </main>
 
 <!--Logo and info-->
