--- a/portfolio.html
+++ b/portfolio.html
@@ -213,45 +213,39 @@
 <!--Logo and info-->
 <footer class="page-footer">
     <div class="container footer">
-    <div>
-        <a href="./index.html" class="footer-logo">
-                    <span>Web</span>Studio
-        </a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
-    <div class="footer-media">
-        <p class="social-media">Social media</p>
-        <ul class="site-soc-list">
-            <li class="site-soc-item">
-                <a href="" class="site-soc-link">
-                    <svg class="site-soc-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon1"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="site-soc-item"> 
-                <a href="" class="site-soc-link">
-                    <svg class="site-soc-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon2"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="site-soc-item">
-                <a href="" class="site-soc-link">
-                    <svg class="site-soc-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon3"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="site-soc-item">
-                <a href="" class="site-soc-link">
-                    <svg class="site-soc-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon4"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
+        <div class="footer-media">
+            <p class="social-media">Social media</p>
+            <ul class="site-soc-list">
+                <li class="site-soc-item">
+                    <a href="" class="site-soc-link">
+                        <svg class="site-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="site-soc-item"> 
+                    <a href="" class="site-soc-link">
+                        <svg class="site-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="site-soc-item">
+                    <a href="" class="site-soc-link">
+                        <svg class="site-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="site-soc-item">
+                    <a href="" class="site-soc-link">
+                        <svg class="site-soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </footer>
 </body>
